<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="zh">
    <string name="app_name">giant-explorer</string>

    <string name="string_add_file">添加文件</string>
    <string name="string_add">添加</string>
    <string name="string_add_directory">添加文件夹</string>
    <string name="first_fragment_label">插件列表</string>
    <string name="second_fragment_label">插件详情</string>

    <string name="title_activity_settings">设置</string>
    <string name="title_activity_root_access">Root Access</string>
    <string name="title_activity_plugin_manage">PluginManageActivity</string>
    <string name="title_activity_background_task_config">配置后台任务</string>
    <string name="title_activity_remote_manager">远程管理</string>

    <string name="add_background_task_description">添加后台任务</string>
    <string name="delete">删除</string>
    <string name="move_to">移动到</string>
    <string name="copy_to">复制到</string>
    <string name="copy_files">复制</string>
    <string name="properties">属性</string>
    <string name="filter_hidden_file">过滤隐藏文件</string>
    <string name="new_window">新建窗口</string>
    <string name="settings">设置</string>
    <string name="root_access">root 访问</string>
    <string name="about">关于</string>
    <string name="operation_task_done">完成</string>
    <string name="stay_screen_on">保持常亮</string>
    <string name="plugin_manager">插件管理</string>
    <string name="filter">过滤</string>
    <string name="sort">排序</string>
    <string name="sort_and_filter">排序与过滤</string>
    <string name="sort_by">排序方式</string>
    <string name="sort_by_name">按名称</string>
    <string name="sort_by_size">按大小</string>
    <string name="sort_by_time">按时间</string>
    <string name="sort_direction">排序方向</string>
    <string name="sort_ascending">正向（升序）</string>
    <string name="sort_descending">逆向（降序）</string>
    <string name="filter_options">过滤选项</string>
    <string name="switch_root">切换</string>
    <string name="paste">粘贴</string>
    <string name="background_task_manage">后台任务管理</string>
    <string name="root_intro">了解如何root</string>
    <string name="duration_ms">时长: %1$s ms</string>
    <string name="remote_access">远程访问</string>
    <string name="item_show_as_linear">线性</string>
    <string name="item_show_as_grid">网格</string>
    <string name="type_picture">图片</string>
    <string name="type_video">视频</string>
    <string name="type_text">文本</string>
    <string name="type_audio">音乐</string>
    <string name="type_hex">十六进制</string>
    <string name="type_any">任意类型</string>
    <string name="symlink_indicator_desc">indicate this file is symlink</string>
    <string name="file_icon_desc" translatable="false">file icon</string>
    <string name="open_window_mode">打开新窗口的模式 %s</string>
    <string name="open_window_mode_dialog_title">打开新窗口的模式</string>
    <string name="setting_key_open_window_mode" translatable="false">open_window_mode</string>
    <string name="prompt_before_drag_drop">粘贴和拖拽之前需要手动同意</string>
    <string name="server">服务器</string>
    <string name="port">端口</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="share_name_for_smb">share name. for smb</string>
    <string name="test_connection">测试连接</string>
    <string name="is_smb" translatable="false">is smb</string>
    <string name="is_sftp" translatable="false">is sftp</string>
    <string name="is_ftp" translatable="false">is ftp</string>
    <string name="is_ftps_explicit" translatable="false">is ftps explicit</string>
    <string name="is_ftps_implicit" translatable="false">is ftps implicit</string>
    <string name="is_webdav" translatable="false">is webdav</string>
    <string name="preview_archive">预览压缩文件</string>
    <string name="manage_permission">管理权限</string>
    <string name="leak_canary_display_activity_label" translatable="false">Giant Explorer Leaks</string>
</resources>