<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".control.remote.RemoteDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <HorizontalScrollView
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:id="@+id/type_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/type_smb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_smb" />

                <RadioButton
                    android:id="@+id/type_sftp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_sftp" />

                <RadioButton
                    android:id="@+id/type_ftp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_ftp" />

                <RadioButton
                    android:id="@+id/type_ftps_explicit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_ftps_explicit" />

                <RadioButton
                    android:id="@+id/type_ftps_implicit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_ftps_implicit" />

                <RadioButton
                    android:id="@+id/type_webdav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_webdav" />
            </RadioGroup>
        </HorizontalScrollView>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group" />

        <EditText
            android:id="@+id/server_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/server"
            app:layout_constraintTop_toBottomOf="@id/name_input" />

        <EditText
            android:id="@+id/port_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/port"
            app:layout_constraintTop_toBottomOf="@id/server_input" />

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user"
            app:layout_constraintTop_toBottomOf="@id/port_input" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/user_input" />

        <EditText
            android:id="@+id/share_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/share_name_for_smb"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <Button
            android:id="@+id/test_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_connection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_ok" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/share_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>